--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,6 +12,16 @@
         "plugin:prettier/recommended"
       ],
       "rules": {
+
+        "comma-dangle": "off",
+        "@typescript-eslint/comma-dangle": ["error", {
+          "arrays": "never",
+          "objects": "always-multiline",
+          "imports": "never",
+          "exports": "never",
+          "functions": "never"
+        }],
+
         "@angular-eslint/directive-selector": [
           "error",
           {
