--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,8 @@
     "lib": ["ES2022", "dom"],
     "paths": {
       "@interfaces/*": ["app/interfaces/*"],
-      "@components/*": ["app/components/*"]
+      "@components/*": ["app/components/*"],
+      "@shared/*": ["app/shared/*"]
     }
   },
   "angularCompilerOptions": {
