--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,8 @@
     "paths": {
       "@interfaces/*": ["app/interfaces/*"],
       "@components/*": ["app/components/*"],
-      "@shared/*": ["app/shared/*"]
+      "@shared/*": ["app/shared/*"],
+      "@services/*": ["app/services/*"]
     }
   },
   "angularCompilerOptions": {
