--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --host 0.0.0.0",
+    "backend": " json-server --watch data/todo.json",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
@@ -50,6 +51,7 @@
     "karma-jasmine-html-reporter": "~2.0.0",
     "prettier": "^2.8.2",
     "prettier-eslint": "^15.0.1",
-    "typescript": "~4.9.4"
+    "typescript": "~4.9.4",
+    "json-server": "^0.17.1"
   }
 }
