--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --host 0.0.0.0",
+    "start": "concurrently \"ng serve --host 0.0.0.0\" \"npm:backend\"",
     "backend": " json-server --watch data/todo.json",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
@@ -40,10 +40,12 @@
     "@types/jasmine": "~4.3.0",
     "@typescript-eslint/eslint-plugin": "5.44.0",
     "@typescript-eslint/parser": "5.44.0",
+    "concurrently": "^8.0.1",
     "eslint": "^8.28.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
     "jasmine-core": "~4.5.0",
+    "json-server": "^0.17.1",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.2.0",
@@ -51,7 +53,6 @@
     "karma-jasmine-html-reporter": "~2.0.0",
     "prettier": "^2.8.2",
     "prettier-eslint": "^15.0.1",
-    "typescript": "~4.9.4",
-    "json-server": "^0.17.1"
+    "typescript": "~4.9.4"
   }
 }
